Fixing sync issues